fix overflow

--- a/Css/master.css
+++ b/Css/master.css
@@ -4,6 +4,7 @@
 
 body{
     font-family: "Open Sans", serif;
+    overflow-x: hidden;
 }
 
 /* <!-- start setting box --> */
